<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.matri.catplan.LoginActivity"
    tools:ignore="Deprecated">

    <EditText
        android:id="@+id/name"
        android:layout_width="356dp"
        android:layout_height="58dp"
        android:layout_x="8dp"
        android:layout_y="147dp"
        android:ems="10"
        android:hint="@string/username"
        android:textColor="@color/colorPrimaryDark"
        tools:ignore="TextFields,LabelFor" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="386dp"
        android:layout_height="60dp"
        android:layout_x="10dp"
        android:layout_y="236dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        tools:ignore="LabelFor">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="226dp"
        android:layout_height="67dp"
        android:layout_x="68dp"
        android:layout_y="24dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="CatPlan"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimary"
        android:textSize="45sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/register"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_x="81dp"
        android:layout_y="344dp"
        android:text="Login"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/signup"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_x="133dp"
        android:layout_y="433dp"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        tools:ignore="HardcodedText" />

</AbsoluteLayout>
